# speedrun-project

./: .gitignore  README.md  pyproject.toml
src/: Statistics.ipynb  fetch_data.py  generate_statistics.py  main.py
src/clients/: __init__.py  speedrun_client.py
src/data/: games.json
src/data/runs/: 26802y1p.json  2680571p.json  2680871p.json  2680g51p.json  2680j91p.json  2680ky1p.json  2680r51p.json  2680wo1p.json  2680x71p.json  2682056p.json  2682096p.json  2682456p.json  26825y6p.json  2682eo6p.json  2682gk6p.json  2682l56p.json  2682lk6p.json  2682qk6p.json  2682ro6p.json  2684l9dp.json  2684nydp.json  2684oydp.json  2685376p.json  2685k56p.json  2685ok6p.json  2685py6p.json  2685yo6p.json  268727dp.json  26878odp.json  2687jydp.json  2687m7dp.json  2687vodp.json  2687wkdp.json  2687y5dp.json  2688056p.json  2688296p.json  2688e76p.json  2688go6p.json  2688j56p.json  2688jk6p.json  (+6742 more)
src/services/: __init__.py  json_dumper.py  json_loader.py  speedrun_service.py
